feat: Add support for external database deployment, dynamic CORS configuration via environment variables, and comprehensive deployment documentation.